--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shaded Feather - Contact</title>
+    <link rel="shortcut icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -123,97 +125,7 @@
         </div>
     </div>
 </div>
-
-
-<!-- <div class="container-fluid our-people-section">
-    <div class="row">
-        <div class="col">
-            <div class="extra-lg-text">
-                <span>behind every</span><br>
-                <span>great project,</span><br>
-                <span>shaded feather team!</span>
-            </div>
-            <div class="lg-text"><span class="other-color">our team </span></div>
-        </div>
-    </div>
-    <div class="row people-box-row">
-        <div class="col-sm-7">
-            <div class="people-box">
-                <div class="title">reachus vig</div>
-                <div class="subtitle">Founder - Director</div>
-            </div>
-        </div>
-        <div class="col-sm-5">
-            <div class="btn-holder">
-                <a href="#" class="cr-btn black ex-padding">reachus@shadedfeather.com</a>
-            </div>
-        </div>
-    </div>
-    <div class="row people-box-row">
-        <div class="col-sm-7">
-            <div class="people-box">
-                <div class="title">namit gogia</div>
-                <div class="subtitle">Producer</div>
-            </div>
-        </div>
-        <div class="col-sm-5">
-            <div class="btn-holder">
-                <a href="#" class="cr-btn black ex-padding">namit@shadedfeather.com</a>
-            </div>
-        </div>
-    </div>
-    <div class="row people-box-row">
-        <div class="col-sm-7">
-            <div class="people-box">
-                <div class="title">rajesh parihar</div>
-                <div class="subtitle">Post Head</div>
-            </div>
-        </div>
-        <div class="col-sm-5">
-            <div class="btn-holder">
-                <a href="#" class="cr-btn black ex-padding">rajesh.p@shadedfeather.com</a>
-            </div>
-        </div>
-    </div>
-    <div class="row people-box-row">
-        <div class="col-sm-7">
-            <div class="people-box">
-                <div class="title">anjali prasad</div>
-                <div class="subtitle">creative producer</div>
-            </div>
-        </div>
-        <div class="col-sm-5">
-            <div class="btn-holder">
-                <a href="#" class="cr-btn black ex-padding">anjali.p@shadedfeather.com</a>
-            </div>
-        </div>
-    </div>
-    <div class="row people-box-row">
-        <div class="col-sm-7">
-            <div class="people-box">
-                <div class="title">rahul gaur</div>
-                <div class="subtitle">Assistant Director</div>
-            </div>
-        </div>
-        <div class="col-sm-5">
-            <div class="btn-holder">
-                <a href="#" class="cr-btn black ex-padding">rahul.gaur@shadedfeather.com</a>
-            </div>
-        </div>
-    </div>
-</div> -->
 <footer class="container-fluid footer">
-    <!-- <div class="row">
-        <div class="col">
-            <div class="lg-text">
-                <span>100% satisfication.</span><br>
-                <span>lets create</span>
-            </div>
-            <div class="normal-text">
-                <p>We'll take your business to the next level, with our proven<br>strategies, latest technologies and friendly creatives that<br>will work to produce the best outcome possible.</p>
-            </div>
-        </div>
-    </div> -->
     <div class="row">
         <div class="col">
             <div class="contact-info-holder">
