--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <h4 class="text home-text-2">We're specialised in the best of content, our work speaks of itself.</h4>
                     </div>
                 </div>
-                <a href="#" class="project-link-full"></a>
+                <a href="./films.html" class="project-link-full"></a>
         </div>
     </div>
 </div>
@@ -107,7 +107,7 @@
                         <h4 class="text home-text-2">here the text of animations and cg will go Pending...</h4>
                     </div>
                 </div>
-                <a href="#" class="project-link-full"></a>
+                <a href="./animations.html" class="project-link-full"></a>
         </div>
     </div>
 </div>
@@ -122,7 +122,7 @@
         <div class="col-md-6">
             <div class="boxy img-box">
                 <div class="img"><img src="./Assets/wetransfer_images_2023-01-16_1340/Images/Screenshot 2023-01-16 at 6.11.15 PM.png" alt=""></div>
-                <a href="project.html" class="project-link-full"></a>
+                <a href="./photography.html" class="project-link-full"></a>
             </div>
         </div>
     </div>
@@ -132,7 +132,7 @@
         <div class="col-md-6">
             <div class="boxy img-box">
                 <div class="img"><img src="./Assets/images/HomeImages/giphy.gif" alt=""></div>
-                <a href="#" class="project-link-full"></a>
+                <a href="./microcontent.html" class="project-link-full"></a>
             </div>
         </div>
         <div class="col-md-6">
