--- a/work.html
+++ b/work.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shaded Feather - Work</title>
+    <link rel="shortcut icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./Assets/images/Logo/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -86,7 +88,7 @@
                 <div class="bottom-text">
                     <div class="link">VIEW VIDEOS</div>
                 </div>
-                <a href="#" class="project-link-full"></a>
+                <a href="./films.html" class="project-link-full"></a>
             </div>
         </div>
     </div>
@@ -103,7 +105,7 @@
                 <div class="bottom-text">
                     <div class="link">VIEW ANIMATIONS AND CG</div>
                 </div>
-                <a href="#" class="project-link-full"></a>
+                <a href="./animations.html" class="project-link-full"></a>
             </div>
         </div>
     </div>
@@ -116,7 +118,7 @@
                 <div class="bottom-text">
                     <div class="link">VIEW PHOTOS</div>
                 </div>
-                <a href="project.html" class="project-link-full"></a>
+                <a href="./photography.html" class="project-link-full"></a>
             </div>
         </div>
         <div class="col-md-6">
@@ -125,7 +127,7 @@
                 <div class="bottom-text">
                     <div class="link">VIEW MICROCONTENT</div>
                 </div>
-                <a href="#" class="project-link-full"></a>
+                <a href="./microcontent.html" class="project-link-full"></a>
             </div>
         </div>
     </div>
