home page responsified

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="boxy c1-color" >
-                <h1 class="title" style="margin-left: 2rem;">PHOTOGRAPHY</h1>
+                <h1 class="title photography-title">PHOTOGRAPHY</h1>
                 <h4 class="text home-text-1">Capturing Best of Brands, <br>Where our Creativity and their Vision Stands.</h4>
             </div>
         </div>
@@ -171,61 +171,61 @@
             </div>
             <marquee style="height: 15rem;" scrollamount="7" behavior="scroll" direction="up">
             <div class="">
-            <div style="height: 3rem;width: 100%; display: flex; gap: 0 40px; margin-bottom: 3rem;">
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/1Electronics/2Panasonic.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/1Electronics/LG-lifes-good-gray-lettering.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/1Electronics/oppo.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/1Electronics/Philips (1).png" alt=""></div>
+            <div class="clients-div">
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/1Electronics/2Panasonic.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/1Electronics/LG-lifes-good-gray-lettering.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/1Electronics/oppo.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/1Electronics/Philips (1).png" alt=""></div>
             </div>
-            <div style="height: 3rem;width: 100%; display: flex; gap: 0 40px; margin-bottom: 3rem;">
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/1Electronics/WhirlpoolCorp-2017Logo_2C_B.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/2Engineering and Technology/bosch.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/2Engineering and Technology/JSW-Steel-Logo-PNG.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/2Engineering and Technology/pngwing.com.png" alt=""></div>
+            <div class="clients-div">
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/1Electronics/WhirlpoolCorp-2017Logo_2C_B.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/2Engineering and Technology/bosch.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/2Engineering and Technology/JSW-Steel-Logo-PNG.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/2Engineering and Technology/pngwing.com.png" alt=""></div>
             </div>
-            <div style="height: 3rem;width: 100%; display: flex; gap: 0 40px; margin-bottom: 3rem;">
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/3Healthcare & Wellness/duroflex.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/3Healthcare & Wellness/ew-villa-medica-logo-footer-@46.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/3Healthcare & Wellness/insect-logo-casestudy.png" alt=""></div> 
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/3Healthcare & Wellness/The_Himalaya_Drug_Company_logo.png" alt=""></div> 
+            <div class="clients-div">
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/3Healthcare & Wellness/duroflex.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/3Healthcare & Wellness/ew-villa-medica-logo-footer-@46.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/3Healthcare & Wellness/insect-logo-casestudy.png" alt=""></div> 
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/3Healthcare & Wellness/The_Himalaya_Drug_Company_logo.png" alt=""></div> 
             </div>
-            <div style="height: 3rem;width: 100%; display: flex; gap: 0 40px; margin-bottom: 3rem;">
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/3Healthcare & Wellness/MamyPoco.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/3Healthcare & Wellness/logo.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/4Automobiles/543-5437196_maruti-suzuki-logo-png-transparent-maruti-suzuki-logo.png" alt=""></div> 
+            <div class="clients-div">
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/3Healthcare & Wellness/MamyPoco.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/3Healthcare & Wellness/logo.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/4Automobiles/543-5437196_maruti-suzuki-logo-png-transparent-maruti-suzuki-logo.png" alt=""></div> 
                 <div class="logo-holder"><img style="height: 3rem; background-color: gray; width: auto;" src="./Assets/images/Logos/4Automobiles/kia.avif" alt=""></div> 
             </div>
-            <div style="height: 3rem;width: 100%; display: flex; gap: 0 40px; margin-bottom: 3rem;">
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/4Automobiles/nissan-logo-2020-black.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/4Automobiles/vivo-logo-black-and-white-1.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Baby Care/luvlap-logo.png" alt=""></div> 
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Baby Care/Medela.png" alt=""></div> 
+            <div class="clients-div">
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/4Automobiles/nissan-logo-2020-black.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/4Automobiles/vivo-logo-black-and-white-1.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Baby Care/luvlap-logo.png" alt=""></div> 
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Baby Care/Medela.png" alt=""></div> 
             </div>
         </div>
             <div class="">
-            <div style="height: 3rem;width: 100%; display: flex; gap: 0 40px; margin-bottom: 3rem;">
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Electronics Retailer/reliance-digital.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Food & Beverage/1seagram.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Food & Beverage/AseesLogo-Eng.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Food & Beverage/mother-dairy-logo-vector.png" alt=""></div>
+            <div class="clients-div">
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Electronics Retailer/reliance-digital.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Food & Beverage/1seagram.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Food & Beverage/AseesLogo-Eng.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Food & Beverage/mother-dairy-logo-vector.png" alt=""></div>
             </div>
-            <div style="height: 3rem;width: 100%; display: flex; gap: 0 40px; margin-bottom: 3rem;">
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Food & Beverage/Diageo.svg" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Home & Kitchen appliances/agaro-logo_1.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Home & Kitchen appliances/pigeon-kitchen-appliances-logo-A47DD13529-seeklogo.com.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Media/ABP_Live.png" alt=""></div>
+            <div class="clients-div">
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Food & Beverage/Diageo.svg" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Home & Kitchen appliances/agaro-logo_1.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Home & Kitchen appliances/pigeon-kitchen-appliances-logo-A47DD13529-seeklogo.com.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Media/ABP_Live.png" alt=""></div>
             </div>
-            <div style="height: 3rem;width: 100%; display: flex; gap: 0 40px; margin-bottom: 3rem;">
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Social Networking/Facebook-logo-500x313.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Social Networking/Tinder-logo.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Tourism/8150fb3f7fceaf371e9f1535a5f396e55cccf9c9.png" alt=""></div> 
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/E Commerce/Screenshot 2022-12-05 at 6.23.10 PM.png" alt=""></div> 
+            <div class="clients-div">
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Social Networking/Facebook-logo-500x313.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Social Networking/Tinder-logo.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Tourism/8150fb3f7fceaf371e9f1535a5f396e55cccf9c9.png" alt=""></div> 
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/E Commerce/Screenshot 2022-12-05 at 6.23.10 PM.png" alt=""></div> 
             </div>
-            <div style="height: 3rem;width: 100%; display: flex; gap: 0 40px; margin-bottom: 3.0rem;">
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Banking & Finance/HDFC_Life_Logo.svg.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/adani.png" alt=""></div>
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Fashion Beaty & Lifestyle/coats-logo-black-and-white.png" alt=""></div> 
-                <div class="logo-holder"><img style="height: 3rem; width: auto;" src="./Assets/images/Logos/Fashion Beaty & Lifestyle/kay-jewelers-logo.png" alt=""></div> 
+            <div class="clients-div">
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Banking & Finance/HDFC_Life_Logo.svg.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/adani.png" alt=""></div>
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Fashion Beaty & Lifestyle/coats-logo-black-and-white.png" alt=""></div> 
+                <div class="logo-holder"><img class='clients-img' src="./Assets/images/Logos/Fashion Beaty & Lifestyle/kay-jewelers-logo.png" alt=""></div> 
             </div>
         </div>
         </marquee>
@@ -250,7 +250,7 @@
         <div class="col">
             <div class="contact-info-holder">
                 <div class="title hover">Call us</div>
-                <div style="display: flex; gap: 20px;">
+                <div class="footer-call-div">
                     <div class="contact-info">9999251711, </div>
                     <div class="contact-info"">9999091710 </div>
                 </div>
