--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="">
             <div class="boxy img-box">
                 <div class="img video-div">
-                    <video className="video-content" style="width: 100%; height: auto;" autoPlay muted controls loop>
+                    <video className="video-content" style="width: 100%; height: auto;" autoPlay muted  loop>
                       <source src='./Assets/videos/products-video.mp4' type='video/mp4' />
                     </video>
                 </div>
@@ -97,7 +97,7 @@
         <div class="">
             <div class="boxy img-box">
                 <div class="img video-div">
-                    <video className="video-content" style="width: 100%; height: auto;" autoPlay muted controls loop>
+                    <video className="video-content" style="width: 100%; height: auto;" autoPlay muted  loop>
                       <source src='./Assets/videos/Banner.mp4' type='video/mp4' />
                     </video>
                 </div>
